gccida/c2/dump_sbitmap
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_sbitmap/src/sbitmap.c:1061:17: error: use of undeclared identifier 'off_6474F4'
fprintf( file, &off_6474F4[1], _bittest64( ( const __int64 *)&v8, v7)); 
                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_sbitmap/src/obj/sbitmap.o] Error 1
